22.03.6/packages/arm_cortex-a7_neon-vfpv4/base/index.md
---
---

# [archive](/archive/) / [22.03.6](/archive/22.03.6/) / [packages](/archive/22.03.6/packages/) / [arm_cortex-a7_neon-vfpv4](/archive/22.03.6/packages/arm_cortex-a7_neon-vfpv4/) / base


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 48K | |
| 🗄️ [Packages.gz](./Packages.gz) | 16K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 64K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [ar3k-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./ar3k-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 940K | |
| 🗄️ [ath9k-htc-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./ath9k-htc-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 64K | |
| 🗄️ [blkid_2.37.4-1_arm_cortex-a7_neon-vfpv4.ipk](./blkid_2.37.4-1_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [brcmfmac-firmware-usb_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./brcmfmac-firmware-usb_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 492K | |
| 🗄️ [busybox_1.35.0-5_arm_cortex-a7_neon-vfpv4.ipk](./busybox_1.35.0-5_arm_cortex-a7_neon-vfpv4.ipk) | 232K | |
| 🗄️ [ca-bundle_20230311-1_all.ipk](./ca-bundle_20230311-1_all.ipk) | 124K | |
| 🗄️ [ca-certificates_20230311-1_all.ipk](./ca-certificates_20230311-1_all.ipk) | 132K | |
| 🗄️ [carl9170-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./carl9170-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [chat_2.4.9.git-2021-01-04-3_arm_cortex-a7_neon-vfpv4.ipk](./chat_2.4.9.git-2021-01-04-3_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [dnsmasq_2.86-16_arm_cortex-a7_neon-vfpv4.ipk](./dnsmasq_2.86-16_arm_cortex-a7_neon-vfpv4.ipk) | 132K | |
| 🗄️ [e2fsprogs_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk](./e2fsprogs_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk) | 192K | |
| 🗄️ [edgeport-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./edgeport-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [firewall4_2022-10-18-7ae5e14b-1_arm_cortex-a7_neon-vfpv4.ipk](./firewall4_2022-10-18-7ae5e14b-1_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [getrandom_2021-08-03-205defb5-2_arm_cortex-a7_neon-vfpv4.ipk](./getrandom_2021-08-03-205defb5-2_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [hostapd-common_2022-01-16-cff80b4f-18.3_arm_cortex-a7_neon-vfpv4.ipk](./hostapd-common_2022-01-16-cff80b4f-18.3_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [hostapd_2022-01-16-cff80b4f-18.3_arm_cortex-a7_neon-vfpv4.ipk](./hostapd_2022-01-16-cff80b4f-18.3_arm_cortex-a7_neon-vfpv4.ipk) | 376K | |
| 🗄️ [index.json](./index.json) | 4.0K | |
| 🗄️ [ip-tiny_5.15.0-4_arm_cortex-a7_neon-vfpv4.ipk](./ip-tiny_5.15.0-4_arm_cortex-a7_neon-vfpv4.ipk) | 144K | |
| 🗄️ [iw_5.16-1_arm_cortex-a7_neon-vfpv4.ipk](./iw_5.16-1_arm_cortex-a7_neon-vfpv4.ipk) | 48K | |
| 🗄️ [iwinfo_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk](./iwinfo_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [jansson4_2.13.1-2_arm_cortex-a7_neon-vfpv4.ipk](./jansson4_2.13.1-2_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [jntools_0.11-2_arm_cortex-a7_neon-vfpv4.ipk](./jntools_0.11-2_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [jshn_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk](./jshn_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [jsonfilter_2018-02-04-c7e938d6-1_arm_cortex-a7_neon-vfpv4.ipk](./jsonfilter_2018-02-04-c7e938d6-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [kobs-ng_5.4-1_arm_cortex-a7_neon-vfpv4.ipk](./kobs-ng_5.4-1_arm_cortex-a7_neon-vfpv4.ipk) | 88K | |
| 🗄️ [libblkid1_2.37.4-1_arm_cortex-a7_neon-vfpv4.ipk](./libblkid1_2.37.4-1_arm_cortex-a7_neon-vfpv4.ipk) | 124K | |
| 🗄️ [libblobmsg-json20220515_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk](./libblobmsg-json20220515_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libbz2-1.0_1.0.8-1_arm_cortex-a7_neon-vfpv4.ipk](./libbz2-1.0_1.0.8-1_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [libcap_2.63-1_arm_cortex-a7_neon-vfpv4.ipk](./libcap_2.63-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [libcomerr0_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk](./libcomerr0_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libertas-sdio-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./libertas-sdio-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 344K | |
| 🗄️ [libertas-spi-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./libertas-spi-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 92K | |
| 🗄️ [libertas-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./libertas-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 216K | |
| 🗄️ [libext2fs2_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk](./libext2fs2_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk) | 172K | |
| 🗄️ [libf2fs6_1.14.0-3_arm_cortex-a7_neon-vfpv4.ipk](./libf2fs6_1.14.0-3_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [libiwinfo-data_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk](./libiwinfo-data_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [libiwinfo-lua_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk](./libiwinfo-lua_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libiwinfo20210430_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk](./libiwinfo20210430_2022-12-15-8d158096-1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [libjson-c5_0.15-2_arm_cortex-a7_neon-vfpv4.ipk](./libjson-c5_0.15-2_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [libjson-script20220515_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk](./libjson-script20220515_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libltdl7_2.4.6-2_arm_cortex-a7_neon-vfpv4.ipk](./libltdl7_2.4.6-2_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [liblua5.1.5_5.1.5-10_arm_cortex-a7_neon-vfpv4.ipk](./liblua5.1.5_5.1.5-10_arm_cortex-a7_neon-vfpv4.ipk) | 64K | |
| 🗄️ [libmbedtls12_2.28.5-1_arm_cortex-a7_neon-vfpv4.ipk](./libmbedtls12_2.28.5-1_arm_cortex-a7_neon-vfpv4.ipk) | 192K | |
| 🗄️ [libmnl0_1.0.5-1_arm_cortex-a7_neon-vfpv4.ipk](./libmnl0_1.0.5-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libncurses6_6.3-2_arm_cortex-a7_neon-vfpv4.ipk](./libncurses6_6.3-2_arm_cortex-a7_neon-vfpv4.ipk) | 156K | |
| 🗄️ [libnftnl11_1.2.1-2_arm_cortex-a7_neon-vfpv4.ipk](./libnftnl11_1.2.1-2_arm_cortex-a7_neon-vfpv4.ipk) | 52K | |
| 🗄️ [libnl-tiny1_2021-11-21-8e0555fb-1_arm_cortex-a7_neon-vfpv4.ipk](./libnl-tiny1_2021-11-21-8e0555fb-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [libopenssl1.1_1.1.1w-1_arm_cortex-a7_neon-vfpv4.ipk](./libopenssl1.1_1.1.1w-1_arm_cortex-a7_neon-vfpv4.ipk) | 1.1M | |
| 🗄️ [libreadline8_8.1-1_arm_cortex-a7_neon-vfpv4.ipk](./libreadline8_8.1-1_arm_cortex-a7_neon-vfpv4.ipk) | 124K | |
| 🗄️ [libss2_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk](./libss2_1.46.5-2_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [libubox20220515_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk](./libubox20220515_2022-05-15-d2223ef9-1_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [libubus-lua_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk](./libubus-lua_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libubus20220601_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk](./libubus20220601_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [libuci20130104_2021-10-22-f84f49f0-6_arm_cortex-a7_neon-vfpv4.ipk](./libuci20130104_2021-10-22-f84f49f0-6_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [libuclient20201210_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk](./libuclient20201210_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [libucode20220812_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk](./libucode20220812_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk) | 64K | |
| 🗄️ [libustream-wolfssl20201210_2022-12-08-9217ab46-2_arm_cortex-a7_neon-vfpv4.ipk](./libustream-wolfssl20201210_2022-12-08-9217ab46-2_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libuuid1_2.37.4-1_arm_cortex-a7_neon-vfpv4.ipk](./libuuid1_2.37.4-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [libwolfssl5.6.4.ee39414e_5.6.4-stable-1_arm_cortex-a7_neon-vfpv4.ipk](./libwolfssl5.6.4.ee39414e_5.6.4-stable-1_arm_cortex-a7_neon-vfpv4.ipk) | 476K | |
| 🗄️ [logd_2021-08-03-205defb5-2_arm_cortex-a7_neon-vfpv4.ipk](./logd_2021-08-03-205defb5-2_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [lua_5.1.5-10_arm_cortex-a7_neon-vfpv4.ipk](./lua_5.1.5-10_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-app-jntools_git-23.338.29229-373463c_all.ipk](./luci-app-jntools_git-23.338.29229-373463c_all.ipk) | 4.0K | |
| 🗄️ [luci-app-jntools_git-24.009.48676-bb9173f_all.ipk](./luci-app-jntools_git-24.009.48676-bb9173f_all.ipk) | 4.0K | |
| 🗄️ [lumimqttd_0.2.11-1_arm_cortex-a7_neon-vfpv4.ipk](./lumimqttd_0.2.11-1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [memtool_1-1_arm_cortex-a7_neon-vfpv4.ipk](./memtool_1-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [mkf2fs_1.14.0-3_arm_cortex-a7_neon-vfpv4.ipk](./mkf2fs_1.14.0-3_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [mt7601u-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./mt7601u-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [mwifiex-sdio-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./mwifiex-sdio-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 860K | |
| 🗄️ [netifd_2022-08-25-76d2d41b-1_arm_cortex-a7_neon-vfpv4.ipk](./netifd_2022-08-25-76d2d41b-1_arm_cortex-a7_neon-vfpv4.ipk) | 92K | |
| 🗄️ [nftables-json_1.0.2-2.1_arm_cortex-a7_neon-vfpv4.ipk](./nftables-json_1.0.2-2.1_arm_cortex-a7_neon-vfpv4.ipk) | 256K | |
| 🗄️ [odhcp6c_2022-08-05-7d21e8d8-18_arm_cortex-a7_neon-vfpv4.ipk](./odhcp6c_2022-08-05-7d21e8d8-18_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [odhcpd-ipv6only_2023-01-02-4a673e1c-2_arm_cortex-a7_neon-vfpv4.ipk](./odhcpd-ipv6only_2023-01-02-4a673e1c-2_arm_cortex-a7_neon-vfpv4.ipk) | 40K | |
| 🗄️ [openwrt-keyring_2022-03-25-62471e69-3_arm_cortex-a7_neon-vfpv4.ipk](./openwrt-keyring_2022-03-25-62471e69-3_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [opkg_2022-02-24-d038e5b6-1_arm_cortex-a7_neon-vfpv4.ipk](./opkg_2022-02-24-d038e5b6-1_arm_cortex-a7_neon-vfpv4.ipk) | 68K | |
| 🗄️ [p54-usb-firmware_1_arm_cortex-a7_neon-vfpv4.ipk](./p54-usb-firmware_1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [ppp-mod-pppoe_2.4.9.git-2021-01-04-3_arm_cortex-a7_neon-vfpv4.ipk](./ppp-mod-pppoe_2.4.9.git-2021-01-04-3_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [ppp_2.4.9.git-2021-01-04-3_arm_cortex-a7_neon-vfpv4.ipk](./ppp_2.4.9.git-2021-01-04-3_arm_cortex-a7_neon-vfpv4.ipk) | 124K | |
| 🗄️ [procd-seccomp_2022-06-01-7a009685-2_arm_cortex-a7_neon-vfpv4.ipk](./procd-seccomp_2022-06-01-7a009685-2_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [procd-ujail_2022-06-01-7a009685-2_arm_cortex-a7_neon-vfpv4.ipk](./procd-ujail_2022-06-01-7a009685-2_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [procd_2022-06-01-7a009685-2_arm_cortex-a7_neon-vfpv4.ipk](./procd_2022-06-01-7a009685-2_arm_cortex-a7_neon-vfpv4.ipk) | 52K | |
| 🗄️ [r8152-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./r8152-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [rpcd-mod-file_2022-12-15-7de4820c-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-file_2022-12-15-7de4820c-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [rpcd-mod-iwinfo_2022-12-15-7de4820c-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-iwinfo_2022-12-15-7de4820c-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [rpcd_2022-12-15-7de4820c-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd_2022-12-15-7de4820c-1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [rs9113-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./rs9113-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 84K | |
| 🗄️ [rt2800-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./rt2800-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [rt73-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./rt73-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [rtk_hciattach_20201020-1_arm_cortex-a7_neon-vfpv4.ipk](./rtk_hciattach_20201020-1_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [rtl8192cu-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./rtl8192cu-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [spidev-test_5.10.201-5.10.201_arm_cortex-a7_neon-vfpv4.ipk](./spidev-test_5.10.201-5.10.201_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [terminfo_6.3-2_arm_cortex-a7_neon-vfpv4.ipk](./terminfo_6.3-2_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ubox_2021-08-03-205defb5-2_arm_cortex-a7_neon-vfpv4.ipk](./ubox_2021-08-03-205defb5-2_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [ubus_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk](./ubus_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ubusd_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk](./ubusd_2022-06-01-2bebf93c-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [uci_2021-10-22-f84f49f0-6_arm_cortex-a7_neon-vfpv4.ipk](./uci_2021-10-22-f84f49f0-6_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [uclient-fetch_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk](./uclient-fetch_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [ucode-mod-fs_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-fs_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [ucode-mod-ubus_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-ubus_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [ucode-mod-uci_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-uci_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ucode_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk](./ucode_2022-12-02-46d93c9c-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [uhttpd-mod-ubus_2023-06-25-34a8a74d-1_arm_cortex-a7_neon-vfpv4.ipk](./uhttpd-mod-ubus_2023-06-25-34a8a74d-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [uhttpd_2023-06-25-34a8a74d-1_arm_cortex-a7_neon-vfpv4.ipk](./uhttpd_2023-06-25-34a8a74d-1_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [urandom-seed_3_arm_cortex-a7_neon-vfpv4.ipk](./urandom-seed_3_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [urngd_2023-11-01-44365eb1-1_arm_cortex-a7_neon-vfpv4.ipk](./urngd_2023-11-01-44365eb1-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [usign_2020-05-23-f1f65026-1_arm_cortex-a7_neon-vfpv4.ipk](./usign_2020-05-23-f1f65026-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [wireless-regdb_2023.09.01-1_all.ipk](./wireless-regdb_2023.09.01-1_all.ipk) | 4.0K | |
| 🗄️ [wl12xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./wl12xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 1.2M | |
| 🗄️ [wl18xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./wl18xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 336K | |
| 🗄️ [wpa-supplicant_2022-01-16-cff80b4f-18.3_arm_cortex-a7_neon-vfpv4.ipk](./wpa-supplicant_2022-01-16-cff80b4f-18.3_arm_cortex-a7_neon-vfpv4.ipk) | 404K | |
| 🗄️ [wwan_2019-04-29-5_arm_cortex-a7_neon-vfpv4.ipk](./wwan_2019-04-29-5_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [zlib_1.2.11-6_arm_cortex-a7_neon-vfpv4.ipk](./zlib_1.2.11-6_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |

