23.05.6/packages/arm_cortex-a7_neon-vfpv4/base/index.md
---
---

# [archive](/archive/) / [23.05.6](/releases/23.05.6/) / [packages](/releases/23.05.6/packages/) / [arm_cortex-a7_neon-vfpv4](/releases/23.05.6/packages/arm_cortex-a7_neon-vfpv4/) / base


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 52K | |
| 🗄️ [Packages.gz](./Packages.gz) | 16K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 68K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [ar3k-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./ar3k-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 940K | |
| 🗄️ [ath9k-htc-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./ath9k-htc-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 64K | |
| 🗄️ [blkid_2.39-2_arm_cortex-a7_neon-vfpv4.ipk](./blkid_2.39-2_arm_cortex-a7_neon-vfpv4.ipk) | 48K | |
| 🗄️ [brcmfmac-firmware-usb_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./brcmfmac-firmware-usb_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 492K | |
| 🗄️ [broadcom-43455-fmac_20170825-1_arm_cortex-a7_neon-vfpv4.ipk](./broadcom-43455-fmac_20170825-1_arm_cortex-a7_neon-vfpv4.ipk) | 400K | |
| 🗄️ [broadcom-4345C0-hci_20240723-1_arm_cortex-a7_neon-vfpv4.ipk](./broadcom-4345C0-hci_20240723-1_arm_cortex-a7_neon-vfpv4.ipk) | 36K | |
| 🗄️ [busybox_1.36.1-1_arm_cortex-a7_neon-vfpv4.ipk](./busybox_1.36.1-1_arm_cortex-a7_neon-vfpv4.ipk) | 236K | |
| 🗄️ [ca-bundle_20241223-1_all.ipk](./ca-bundle_20241223-1_all.ipk) | 132K | |
| 🗄️ [ca-certificates_20241223-1_all.ipk](./ca-certificates_20241223-1_all.ipk) | 144K | |
| 🗄️ [carl9170-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./carl9170-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [chat_2.4.9.git-2021-01-04-4_arm_cortex-a7_neon-vfpv4.ipk](./chat_2.4.9.git-2021-01-04-4_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [dnsmasq_2.90-2_arm_cortex-a7_neon-vfpv4.ipk](./dnsmasq_2.90-2_arm_cortex-a7_neon-vfpv4.ipk) | 144K | |
| 🗄️ [e2fsprogs_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk](./e2fsprogs_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk) | 192K | |
| 🗄️ [edgeport-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./edgeport-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [firewall4_2023-09-01-598d9fbb-1_arm_cortex-a7_neon-vfpv4.ipk](./firewall4_2023-09-01-598d9fbb-1_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [getrandom_2022-08-13-4c7b720b-2_arm_cortex-a7_neon-vfpv4.ipk](./getrandom_2022-08-13-4c7b720b-2_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [hostapd-common_2023-09-08-e5ccbfc6-8_arm_cortex-a7_neon-vfpv4.ipk](./hostapd-common_2023-09-08-e5ccbfc6-8_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [hostapd_2023-09-08-e5ccbfc6-8_arm_cortex-a7_neon-vfpv4.ipk](./hostapd_2023-09-08-e5ccbfc6-8_arm_cortex-a7_neon-vfpv4.ipk) | 432K | |
| 🗄️ [index.json](./index.json) | 4.0K | |
| 🗄️ [ip-tiny_6.3.0-1_arm_cortex-a7_neon-vfpv4.ipk](./ip-tiny_6.3.0-1_arm_cortex-a7_neon-vfpv4.ipk) | 144K | |
| 🗄️ [iw_5.19-1_arm_cortex-a7_neon-vfpv4.ipk](./iw_5.19-1_arm_cortex-a7_neon-vfpv4.ipk) | 48K | |
| 🗄️ [iwinfo_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk](./iwinfo_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [jansson4_2.14-3_arm_cortex-a7_neon-vfpv4.ipk](./jansson4_2.14-3_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [jntools_0.11-2_arm_cortex-a7_neon-vfpv4.ipk](./jntools_0.11-2_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [jshn_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk](./jshn_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [jsonfilter_2025-04-18-8a86fb78-1_arm_cortex-a7_neon-vfpv4.ipk](./jsonfilter_2025-04-18-8a86fb78-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [kobs-ng_5.4-1_arm_cortex-a7_neon-vfpv4.ipk](./kobs-ng_5.4-1_arm_cortex-a7_neon-vfpv4.ipk) | 88K | |
| 🗄️ [libblkid1_2.39-2_arm_cortex-a7_neon-vfpv4.ipk](./libblkid1_2.39-2_arm_cortex-a7_neon-vfpv4.ipk) | 108K | |
| 🗄️ [libblobmsg-json20230523_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk](./libblobmsg-json20230523_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libbz2-1.0_1.0.8-1_arm_cortex-a7_neon-vfpv4.ipk](./libbz2-1.0_1.0.8-1_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [libcap_2.69-1_arm_cortex-a7_neon-vfpv4.ipk](./libcap_2.69-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [libcomerr0_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk](./libcomerr0_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libext2fs2_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk](./libext2fs2_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk) | 172K | |
| 🗄️ [libf2fs6_1.16.0-1_arm_cortex-a7_neon-vfpv4.ipk](./libf2fs6_1.16.0-1_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [libiwinfo-data_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk](./libiwinfo-data_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [libiwinfo-lua_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk](./libiwinfo-lua_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libiwinfo20230701_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk](./libiwinfo20230701_2023-07-01-ca79f641-1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [libjson-c5_0.16-3_arm_cortex-a7_neon-vfpv4.ipk](./libjson-c5_0.16-3_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [libjson-script20230523_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk](./libjson-script20230523_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libltdl7_2.4.7-1_arm_cortex-a7_neon-vfpv4.ipk](./libltdl7_2.4.7-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [liblua5.1.5_5.1.5-11_arm_cortex-a7_neon-vfpv4.ipk](./liblua5.1.5_5.1.5-11_arm_cortex-a7_neon-vfpv4.ipk) | 64K | |
| 🗄️ [libmbedtls12_2.28.10-1_arm_cortex-a7_neon-vfpv4.ipk](./libmbedtls12_2.28.10-1_arm_cortex-a7_neon-vfpv4.ipk) | 204K | |
| 🗄️ [libmnl0_1.0.5-1_arm_cortex-a7_neon-vfpv4.ipk](./libmnl0_1.0.5-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libncurses6_6.4-2_arm_cortex-a7_neon-vfpv4.ipk](./libncurses6_6.4-2_arm_cortex-a7_neon-vfpv4.ipk) | 156K | |
| 🗄️ [libnftnl11_1.2.6-1_arm_cortex-a7_neon-vfpv4.ipk](./libnftnl11_1.2.6-1_arm_cortex-a7_neon-vfpv4.ipk) | 52K | |
| 🗄️ [libnl-tiny1_2023-07-27-bc92a280-1_arm_cortex-a7_neon-vfpv4.ipk](./libnl-tiny1_2023-07-27-bc92a280-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [libopenssl3_3.0.16-1_arm_cortex-a7_neon-vfpv4.ipk](./libopenssl3_3.0.16-1_arm_cortex-a7_neon-vfpv4.ipk) | 1.5M | |
| 🗄️ [libpcre2_10.42-1_arm_cortex-a7_neon-vfpv4.ipk](./libpcre2_10.42-1_arm_cortex-a7_neon-vfpv4.ipk) | 180K | |
| 🗄️ [libreadline8_8.2-1_arm_cortex-a7_neon-vfpv4.ipk](./libreadline8_8.2-1_arm_cortex-a7_neon-vfpv4.ipk) | 128K | |
| 🗄️ [libss2_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk](./libss2_1.47.0-2_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [libubox20230523_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk](./libubox20230523_2023-05-23-75a3b870-1_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [libubus-lua_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk](./libubus-lua_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libubus20230605_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk](./libubus20230605_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [libuci20130104_2023-08-10-5781664d-1_arm_cortex-a7_neon-vfpv4.ipk](./libuci20130104_2023-08-10-5781664d-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [libuclient20201210_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk](./libuclient20201210_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [libucode20230711_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./libucode20230711_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 68K | |
| 🗄️ [libustream-mbedtls20201210_2023-02-25-498f6e26-1_arm_cortex-a7_neon-vfpv4.ipk](./libustream-mbedtls20201210_2023-02-25-498f6e26-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [libuuid1_2.39-2_arm_cortex-a7_neon-vfpv4.ipk](./libuuid1_2.39-2_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [logd_2022-08-13-4c7b720b-2_arm_cortex-a7_neon-vfpv4.ipk](./logd_2022-08-13-4c7b720b-2_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [lua_5.1.5-11_arm_cortex-a7_neon-vfpv4.ipk](./lua_5.1.5-11_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-app-jntools_git-25.239.61340-04827fd_all.ipk](./luci-app-jntools_git-25.239.61340-04827fd_all.ipk) | 4.0K | |
| 🗄️ [lumimqttd_0.2.11-1_arm_cortex-a7_neon-vfpv4.ipk](./lumimqttd_0.2.11-1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [memtool_1-1_arm_cortex-a7_neon-vfpv4.ipk](./memtool_1-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [mkf2fs_1.16.0-1_arm_cortex-a7_neon-vfpv4.ipk](./mkf2fs_1.16.0-1_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [mt7601u-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./mt7601u-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [mwifiex-sdio-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./mwifiex-sdio-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 860K | |
| 🗄️ [netifd_2024-01-04-c18cc79d-2_arm_cortex-a7_neon-vfpv4.ipk](./netifd_2024-01-04-c18cc79d-2_arm_cortex-a7_neon-vfpv4.ipk) | 96K | |
| 🗄️ [nftables-json_1.0.8-1_arm_cortex-a7_neon-vfpv4.ipk](./nftables-json_1.0.8-1_arm_cortex-a7_neon-vfpv4.ipk) | 276K | |
| 🗄️ [odhcp6c_2023-05-12-bcd28363-20_arm_cortex-a7_neon-vfpv4.ipk](./odhcp6c_2023-05-12-bcd28363-20_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [odhcpd-ipv6only_2023-10-24-d8118f6e-1_arm_cortex-a7_neon-vfpv4.ipk](./odhcpd-ipv6only_2023-10-24-d8118f6e-1_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [openwrt-keyring_2022-03-25-62471e69-2_arm_cortex-a7_neon-vfpv4.ipk](./openwrt-keyring_2022-03-25-62471e69-2_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [opkg_2022-02-24-d038e5b6-2_arm_cortex-a7_neon-vfpv4.ipk](./opkg_2022-02-24-d038e5b6-2_arm_cortex-a7_neon-vfpv4.ipk) | 68K | |
| 🗄️ [ppp-mod-pppoe_2.4.9.git-2021-01-04-4_arm_cortex-a7_neon-vfpv4.ipk](./ppp-mod-pppoe_2.4.9.git-2021-01-04-4_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [ppp_2.4.9.git-2021-01-04-4_arm_cortex-a7_neon-vfpv4.ipk](./ppp_2.4.9.git-2021-01-04-4_arm_cortex-a7_neon-vfpv4.ipk) | 124K | |
| 🗄️ [procd-seccomp_2023-06-25-2db83655-2_arm_cortex-a7_neon-vfpv4.ipk](./procd-seccomp_2023-06-25-2db83655-2_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [procd-ujail_2023-06-25-2db83655-2_arm_cortex-a7_neon-vfpv4.ipk](./procd-ujail_2023-06-25-2db83655-2_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [procd_2023-06-25-2db83655-2_arm_cortex-a7_neon-vfpv4.ipk](./procd_2023-06-25-2db83655-2_arm_cortex-a7_neon-vfpv4.ipk) | 52K | |
| 🗄️ [r8152-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./r8152-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [rpcd-mod-file_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-file_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [rpcd-mod-iwinfo_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-iwinfo_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [rpcd-mod-ucode_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-ucode_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [rpcd_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd_2023-07-01-c07ab2f9-1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [rs9113-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./rs9113-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 84K | |
| 🗄️ [rt2800-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./rt2800-usb-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [rtk_hciattach_20201020-1_arm_cortex-a7_neon-vfpv4.ipk](./rtk_hciattach_20201020-1_arm_cortex-a7_neon-vfpv4.ipk) | 44K | |
| 🗄️ [rtl8192cu-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./rtl8192cu-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [spidev-test_5.15.189-5.15.189_arm_cortex-a7_neon-vfpv4.ipk](./spidev-test_5.15.189-5.15.189_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [terminfo_6.4-2_arm_cortex-a7_neon-vfpv4.ipk](./terminfo_6.4-2_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [ubox_2022-08-13-4c7b720b-2_arm_cortex-a7_neon-vfpv4.ipk](./ubox_2022-08-13-4c7b720b-2_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [ubus_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk](./ubus_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ubusd_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk](./ubusd_2023-06-05-f787c97b-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [uci_2023-08-10-5781664d-1_arm_cortex-a7_neon-vfpv4.ipk](./uci_2023-08-10-5781664d-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [uclient-fetch_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk](./uclient-fetch_2023-04-13-007d9454-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [ucode-mod-fs_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-fs_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [ucode-mod-math_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-math_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [ucode-mod-nl80211_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-nl80211_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 20K | |
| 🗄️ [ucode-mod-rtnl_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-rtnl_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [ucode-mod-ubus_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-ubus_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [ucode-mod-uci_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-uci_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ucode-mod-uloop_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-uloop_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ucode_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk](./ucode_2024-07-11-1a8a0bcf-3_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [uhttpd-mod-ubus_2023-06-25-34a8a74d-2_arm_cortex-a7_neon-vfpv4.ipk](./uhttpd-mod-ubus_2023-06-25-34a8a74d-2_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [uhttpd_2023-06-25-34a8a74d-2_arm_cortex-a7_neon-vfpv4.ipk](./uhttpd_2023-06-25-34a8a74d-2_arm_cortex-a7_neon-vfpv4.ipk) | 28K | |
| 🗄️ [urandom-seed_3_arm_cortex-a7_neon-vfpv4.ipk](./urandom-seed_3_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [urngd_2023-11-01-44365eb1-1_arm_cortex-a7_neon-vfpv4.ipk](./urngd_2023-11-01-44365eb1-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [usign_2020-05-23-f1f65026-1_arm_cortex-a7_neon-vfpv4.ipk](./usign_2020-05-23-f1f65026-1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [wireless-regdb_2025.07.10-1_all.ipk](./wireless-regdb_2025.07.10-1_all.ipk) | 4.0K | |
| 🗄️ [wl12xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./wl12xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 1.2M | |
| 🗄️ [wl18xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk](./wl18xx-firmware_20230804-1_arm_cortex-a7_neon-vfpv4.ipk) | 336K | |
| 🗄️ [wpa-supplicant_2023-09-08-e5ccbfc6-8_arm_cortex-a7_neon-vfpv4.ipk](./wpa-supplicant_2023-09-08-e5ccbfc6-8_arm_cortex-a7_neon-vfpv4.ipk) | 428K | |
| 🗄️ [wwan_2019-04-29-6_arm_cortex-a7_neon-vfpv4.ipk](./wwan_2019-04-29-6_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [zlib_1.2.13-1_arm_cortex-a7_neon-vfpv4.ipk](./zlib_1.2.13-1_arm_cortex-a7_neon-vfpv4.ipk) | 40K | |

